--- a/index.html
+++ b/index.html
@@ -1,1 +1,328 @@
+<!DOCTYPE html>
+<html  lang="fr_FR">
+  <head>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta name="author" lang="fr" content="signer" />
+
+	<title>UXD, Visual, DCI , Writings, Filming, Say and Interaction Designer - /signer - Paris</title>
+
+	<link rel="shortcut icon" href="ico/favicon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
+	<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-ipad.png">
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-iphone-retina.png">
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-ipad-retina.png">
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
+
+	<meta name="description" content="UI/Visual Design, graphic designer - Paris">
+	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
+	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
+
+	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css" />
+	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css" />
+
+	<!--  <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css" />-->
+  <!--  <link href="css/print.css" media="print" rel="stylesheet" type="text/css" />-->
+
+	<script src="scripts/master_functions.js" type="text/javascript"></script>
+  <script src="scripts/modernizr.custom.js" type="text/javascript"></script>
+	<script src="scripts/retina.min.js" type="text/javascript"></script>
+</head>
+
+	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
+	<!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
+	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
+
+	<!-- TODO
+	      MASTER JUILLET PROJECT
+	      Current project writing and production.
+	      Processing Digital Cinema Industry
+	      Interaction Design, Literature...
+	      -->
+	<!--  TODO CONTENT -->
+	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
+	<!--  TODO CONTENT  literature, cinéma, illustration vector and animation CSS3 -->
+	<!--  TODO CONTENT  color graphic experience background flim -->
+  <!--  TODO CONTENT  digital Cinema (RED, ZEISS, COOKE, APPLE, NEUMANN, ZOOM, APUTURE) -->
+
+  <!-- TODO
+	      MASTER JUILLET PROJECT
+	      BDD =>  PostgreSQL, SQLite...
+	      RUBY ON RAILS OR PYTHON
+	      JS, ANGULAR... - APPS...
+	      -->
+
+<body class="chain chain-down full-width-content" role="document">
+	<section id="block-video">
+		<aside id="strip">
+			<input id="button-1" type="radio" name="radio-set" class="sp-selector-1" checked="checked" />
+			<input id="button-2" type="radio" name="radio-set" class="sp-selector-2" />
+			<input id="button-3" type="radio" name="radio-set" class="sp-selector-3" />
+			<input id="button-4" type="radio" name="radio-set" class="sp-selector-4" />
+			<input id="button-5" type="radio" name="radio-set" class="sp-selector-5" />
+			<label for="button-1" class="sp-arrow sp-a1"></label>
+			<label for="button-2" class="sp-arrow sp-a2"></label>
+			<label for="button-3" class="sp-arrow sp-a3"></label>
+			<label for="button-4" class="sp-arrow sp-a4"></label>
+			<label for="button-5" class="sp-arrow sp-a5"></label>
+
+			<article class="sp-content">
+				<ul class="sp-slider clearfix">
+          <li>
+            <!--  TODO CONTENT video cloudflare...
+            <iframe
+         src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ce07dc032e7199123f8e79cd586d382c/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fce07dc032e7199123f8e79cd586d382c%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+         style="border: none;"
+         allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+         allowfullscreen="true"
+       ></iframe>
+            -->
+            <h1>#1 - MASTER JUILLET PROLOGUE</h1>
+					</li>
+					<li>
+						<h1>#2 - MASTER JUILLET EXT 1</h1>
+					</li>
+					<li>
+						<h1>#3 - MASTER JUILLET EXT 2</h1>
+					</li>
+					<li>
+						<h1>#4 - MASTER JUILLET EXT 3</h1>
+					</li>
+					<li>
+						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
+					</li>
+				</ul>
+			</article>
+		</aside>
+</section>
+
+<section class="head" id="rules">
+		<header role="banner">
+			<ul id="video" class="request">
+				<li><a id="vim" class="vim">
+					<svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+					 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+					 x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
+					 xml:space="preserve">
+						<g>
+							<g>
+								<polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
+							</g>
+						</g>
+					</svg>
+				</a></li>
+				<li><a id="vims" class="vims">Hide this content</a></li>
+			</ul>
+
+			<ul id="think" class="request">
+				<li><a id="tree" class="tree">Preparatory video</a></li>
+				<li><a id="trees" class="trees">Hide this content</a></li>
+      </ul>
+
+      <!--  TODO CONTENT SECOND NAV-->
+      <nav role="navigation" id="nav">
+        <ul class="tabs">
+        <li id="1"><a href="#" id="txt"></a>
+        <a href="#" id="texts"></a></li>
+        <li id="2"><a href="#" id="liter"></a>
+        <a href="#" id="liters"></a></li>
+        <li id="3"><a href="#" id="vid"></a>
+        <a href="#" id="vids"></a></li>
+        </ul>
+
+        <ul class="tabs">
+          <li id="sign"><a style="display:none" href="#s-sign" id="signs"class="signs">
+            <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+             x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
+             xml:space="preserve">
+              <g>
+                <g>
+                  <polygon fill="#777" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
+                </g>
+              </g>
+            </svg>
+            </a>
+            <a href="#s-sign" id="signers" class="signers">
+              <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+               xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+               x="0px" y="0px"  width="22.095px"  height="15.503px"  viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
+               xml:space="preserve">
+                <g>
+                  <g>
+                    <polygon fill="#777" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
+                  </g>
+                </g>
+              </svg>
+          </a></li>
+        <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Écriture</a>
+            <a href="#content" id="texts" class="texts">Écriture</a></li>
+          <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Tournage</a>
+            <a href="#s-liter" id="liters" class="liters">Tournage</a></li>
+          <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Dire</a>
+            <a href="#s-video" id="vids" class="vids">Dire</a></li>
+        </ul>
+      </nav>
+
+      <figure><!--  TODO CONTENT PAGE ARCHIVE AND FRAME.IO-->
+          <p class="inners"><a href="https://f.io/D_p1q0Fo" rel="external">ARCHIVES</a></p>
+        </figure>
+		</header>
+
+<section class="inner">
+			<aside id="press">
+				<article role="article" class="text">
+          <!--  TODO CONTENT DEV ACTIVE-->
+					<p><span class="active">Écriture</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
+					<p><span>Tournage</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
+					<p><span>Dire</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
+				</article>
+			</aside>
+</section>
+
+<section id="switch-navigation">
+  <figure>
+    </figure>
+</section>
+
+<section id="s-sign">
+<aside class="page">  <!--  TODO CONTENT-->
+
+  <article>
+    <h2>WIP 2025</h2>
+  </article>
+<div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  </aside>
+</section>
+
+<section id="s-text" class="tab_content">
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE -->
+
+    <article>
+      <h2>001 R3D N&B 30%</h2>
+    </article>
+  <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
+  </aside>
+
+<aside class="page">
+  <figure>
+    <h1>MASTER JUILLET</h1>
+    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+    </p>
+  </figure>
+    <article>
+      <h2>WIP 2025</h2>
+    </article>
+    <!--  TODO CONTENT video cloudflare-->
+        <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
+ </aside>
+</section>
+
+<section id="s-liter"  class="tab_content">
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE -->
+
+    <article>
+      <h2>002 R3D N&B 30%</h2>
+    </article>
+
+    <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
+  </aside>
+
+<aside class="page" id="ifliter">
+  <article>
+     <h2>WIP 2025</h2>
+  </article>
+  <figure>
+    <h1>MASTER JUILLET</h1>
+    <p class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+  </p>
+  </figure>
+
+  <!--  TODO CONTENT video cloudflare-->
+<div id="ifliter0">
+  <iframe
+src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ce07dc032e7199123f8e79cd586d382c/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fce07dc032e7199123f8e79cd586d382c%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+style="border: none;"
+allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+allowfullscreen="true"
+></iframe>
+ </div>
+ <div id="ifliter1">
+   <iframe
+src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ce07dc032e7199123f8e79cd586d382c/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fce07dc032e7199123f8e79cd586d382c%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+style="border: none;"
+allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+allowfullscreen="true"
+></iframe>
+  </div>
+  <div id="ifliter2">
+    <iframe
+ src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ce07dc032e7199123f8e79cd586d382c/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fce07dc032e7199123f8e79cd586d382c%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+ style="border: none;"
+ allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+ allowfullscreen="true"
+></iframe>
+   </div>
+ </aside>
+</section>
+
+<section id="s-video"  class="tab_content">
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE -->
+
+    <article>
+      <h2>003 R3D N&B 30%</h2>
+    </article>
+
+    <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
+  </aside>
+
+<aside class="page">
+  <figure>
+    <h1>MASTER JUILLET</h1>
+    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+    </p>
+  </figure>
+    <article>
+      <h2>WIP 2025</h2>
+    </article>
+    <!--  TODO CONTENT video cloudflare-->
+        <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
+ </aside>
+</section>
+
+ <!-- <footer>PANTONE COLOR GRID USED & SIMPLE CONTACT & CC BY-NC-SA</footer> -->
+
+	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
+	<script src="scripts/screenfull.js" type="text/javascript"></script>
+	<script src="scripts/device.js" type="text/javascript"></script>
+	<script src="scripts/video.js" type="text/javascript"></script>
+ <!--
+  <script src="https://embed.cloudflarestream.com/embed/sdk.latest.js"></script>
+
+<script>
+  const player = Stream(document.getElementById('stream-player'));
+  player.addEventListener('play', () => {
+    console.log('playing!');
+  });
+  player.play().catch(() => {
+    console.log('playback failed, muting to try again');
+    player.muted = true;
+    player.play();
+  });
+</script>
+ -->
+
+</body>
+</html>
