--- a/index.html
+++ b/index.html
@@ -217,14 +217,16 @@
   </aside>
 
 <aside class="page">
+  <article>
+     <h2>WIP 2025</h2>
+  </article>
   <figure>
-    <h1>MASTER JUILLET</h1>
-    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
-    </p>
+    <h1><a href="svg_profile/index.html" rel="external">MASTER JUILLET</a></h1>
   </figure>
-    <article>
-      <h2>WIP 2025</h2>
-    </article>
+  <figure>
+    <p  class="vign">ESSAI (DCP)<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25</p>
+  </figure>
+  
     <!--  TODO CONTENT video cloudflare-->
         <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
  </aside>
@@ -245,9 +247,10 @@
      <h2>WIP 2025</h2>
   </article>
   <figure>
-    <h1>MASTER JUILLET</h1>
-    <p class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
-  </p>
+    <h1><a href="svg_profile/index.html" rel="external">MASTER JUILLET</a></h1>
+  </figure>
+  <figure>
+    <p  class="vign">ESSAI (DCP)<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25</p>
   </figure>
 
   <!--  TODO CONTENT video cloudflare-->
@@ -289,14 +292,16 @@ allowfullscreen="true"
   </aside>
 
 <aside class="page">
+  <article>
+     <h2>WIP 2025</h2>
+  </article>
   <figure>
-    <h1>MASTER JUILLET</h1>
-    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
-    </p>
+    <h1><a href="svg_profile/index.html" rel="external">MASTER JUILLET</a></h1>
   </figure>
-    <article>
-      <h2>WIP 2025</h2>
-    </article>
+  <figure>
+    <p  class="vign">ESSAI (DCP)<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25</p>
+  </figure>
+
     <!--  TODO CONTENT video cloudflare-->
         <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
  </aside>
