--- a/index.html
+++ b/index.html
@@ -90,18 +90,24 @@
        ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
+            <p><img src="../images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
+
 					</li>
 					<li>
 						<h1>#2 - MASTER JUILLET EXT 1</h1>
+            <p><img src="../images/retina/teasing-1@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
+              <p><img src="../images/retina/teasing-2@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
+            <p><img src="../images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
+            <p><img src="../images/retina/teasing-4@2x.jpg" alt="Sun" /></p>
 					</li>
 				</ul>
 			</article>
@@ -226,7 +232,7 @@
   <figure>
     <p  class="vign">ESSAI (DCP)<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25</p>
   </figure>
-  
+
     <!--  TODO CONTENT video cloudflare-->
         <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
  </aside>
