--- a/index.html
+++ b/index.html
@@ -90,24 +90,24 @@
        ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
-            <p><img src="../images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
 
 					</li>
 					<li>
 						<h1>#2 - MASTER JUILLET EXT 1</h1>
-            <p><img src="../images/retina/teasing-1@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-1@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
-              <p><img src="../images/retina/teasing-2@2x.jpg" alt="Sun" /></p>
+              <p><img src="images/retina/teasing-2@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
-            <p><img src="../images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
-            <p><img src="../images/retina/teasing-4@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-4@2x.jpg" alt="Sun" /></p>
 					</li>
 				</ul>
 			</article>
