--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 	<script src="scripts/master_functions.js" type="text/javascript"></script>
   <script src="scripts/modernizr.custom.js" type="text/javascript"></script>
 	<script src="scripts/retina.min.js" type="text/javascript"></script>
+
+	<!--
+  <link href="video-js.min.css" rel="stylesheet">
+  <script src="video.min.js"></script>
+   -->
+
 </head>
 
 	<!--  test <script type="text/javascript" src="http://use.typekit.com/rlj5jei.js"></script>-->
@@ -81,6 +87,16 @@
 			<article class="sp-content">
 				<ul class="sp-slider clearfix">
           <li>
+            <!--  TODO CONTENT video PLAYER
+            <video id="#" class="video-js" controls preload="none" width="#" height="#" poster="#.png" data-setup="{}">
+            <source src="#" type="video/mp4">
+            <source src="#" type="video/webm">
+            <source src="#" type="video/ogg">
+            <track kind="captions" src="#captions.vtt" srclang="en" label="French">
+            <track kind="subtitles" src="#captions.vtt" srclang="en" label="English">
+            </video>
+             -->
+
             <!--  TODO CONTENT video cloudflare...
             <iframe
          src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ce07dc032e7199123f8e79cd586d382c/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fce07dc032e7199123f8e79cd586d382c%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
@@ -285,7 +301,7 @@ allowfullscreen="true"
  style="border: none;"
  allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
  allowfullscreen="true"
-></iframe>
+ ></iframe>
    </div>
  </aside>
 </section>
