--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
       </nav>
 
       <figure><!--  TODO CONTENT PAGE ARCHIVE AND FRAME.IO-->
-          <p class="inners"><a href="https://f.io/D_p1q0Fo" rel="external">ARCHIVES</a></p>
+          <p class="inners"><a href="https://f.io/D_p1q0Fo" rel="external">& ARCHIVES</a></p>
+          <p class="frame"><a href="https://f.io/D_p1q0Fo" rel="external">FRAME.IO</a></p>
         </figure>
 		</header>
 
