--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             </video>
              -->
 
+          <!--  TODO CONTENT video QUALITÉ DU STREAM A VOIR... DÉBIT... ?-->
+
+
             <!--  TODO CONTENT video cloudflare...
           <iframe
          src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/7f7fcc5bc8dd5e048242270d855b22ca/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F7f7fcc5bc8dd5e048242270d855b22ca%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
@@ -290,20 +293,20 @@
  <div id="ifliter1">
    <h3>PROLOGUE</h3>
    <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5c76dd49376efb914ce42dacc6ccacd0/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5c76dd49376efb914ce42dacc6ccacd0%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/3da70fa8499a78d2aa225182b406ff4d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F3da70fa8499a78d2aa225182b406ff4d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
   </div>
   <div id="ifliter2">
     <h3>PROLOGUE</h3>
     <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/acf144891965df44b9739d9d4652c847/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Facf144891965df44b9739d9d4652c847%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/3da70fa8499a78d2aa225182b406ff4d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F3da70fa8499a78d2aa225182b406ff4d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
    </div>
  </aside>
 </section>
