--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           <!--  TODO CONTENT video QUALITÉ DU STREAM A VOIR... DÉBIT... ?-->
 
 
-            <!--  TODO CONTENT video cloudflare...
-          <iframe
-         src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/7f7fcc5bc8dd5e048242270d855b22ca/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F7f7fcc5bc8dd5e048242270d855b22ca%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-         style="border: none;"
-         allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-         allowfullscreen="true"
-         ></iframe>
+            <!--  TODO CONTENT video cloudflare..."
+            <iframe
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+      style="border: none;
+      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+      allowfullscreen="true"
+    ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
             <p><img src="images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
@@ -284,29 +284,29 @@
 <div id="ifliter0">
   <h3>PROLOGUE</h3>
   <iframe
-   src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/3da70fa8499a78d2aa225182b406ff4d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F3da70fa8499a78d2aa225182b406ff4d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-   style="border: none;"
-   allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-   allowfullscreen="true"
- ></iframe>
+src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+style="border: none;"
+allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+allowfullscreen="true"
+></iframe>
  </div>
  <div id="ifliter1">
    <h3>PROLOGUE</h3>
    <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/3da70fa8499a78d2aa225182b406ff4d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F3da70fa8499a78d2aa225182b406ff4d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+ src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+ style="border: none;"
+ allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+ allowfullscreen="true"
+ ></iframe>
   </div>
   <div id="ifliter2">
     <h3>PROLOGUE</h3>
     <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/3da70fa8499a78d2aa225182b406ff4d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F3da70fa8499a78d2aa225182b406ff4d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+  src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+  style="border: none;"
+  allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+  allowfullscreen="true"
+  ></iframe>
    </div>
  </aside>
 </section>
