--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
             </video>
              -->
 
-          <!--  TODO CONTENT video QUALITÉ DU STREAM A VOIR... DÉBIT... ?-->
+          <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR... DÉBIT... ?-->
 
 
             <!--  TODO CONTENT video cloudflare..."
             <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none;
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ca76d15440f57886331a6ca00b0c514a/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fca76d15440f57886331a6ca00b0c514a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+              style="border: none;"
+              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+              allowfullscreen="true"
+            ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
             <p><img src="images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
@@ -284,29 +284,29 @@
 <div id="ifliter0">
   <h3>PROLOGUE</h3>
   <iframe
-src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-style="border: none;"
-allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-allowfullscreen="true"
-></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ca76d15440f57886331a6ca00b0c514a/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fca76d15440f57886331a6ca00b0c514a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
  <div id="ifliter1">
    <h3>PROLOGUE</h3>
    <iframe
- src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
- style="border: none;"
- allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
- allowfullscreen="true"
- ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ca76d15440f57886331a6ca00b0c514a/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fca76d15440f57886331a6ca00b0c514a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
   </div>
   <div id="ifliter2">
     <h3>PROLOGUE</h3>
     <iframe
-  src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/18c5b7f2f0f4a620fbeb753c231a3abd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F18c5b7f2f0f4a620fbeb753c231a3abd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-  style="border: none;"
-  allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-  allowfullscreen="true"
-  ></iframe>
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ca76d15440f57886331a6ca00b0c514a/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fca76d15440f57886331a6ca00b0c514a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+       style="border: none;"
+      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+      allowfullscreen="true"
+    ></iframe>
    </div>
  </aside>
 </section>
