--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </video>
              -->
 
-          <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR... DÉBIT... ?-->
+          <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR...-->
 
 
             <!--  TODO CONTENT video cloudflare..."
@@ -302,7 +302,7 @@
   <div id="ifliter2">
     <h3>WORK IN PROGRESS</h3>
     <iframe
-       src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/04a9e1829431f994f3712d59136b603e/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F04a9e1829431f994f3712d59136b603e%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+       src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/da8a90f7b40111cc792716a2165a5f47/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fda8a90f7b40111cc792716a2165a5f47%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
        style="border: none;"
        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
        allowfullscreen="true"
