--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 <div id="ifliter0">
   <h3>PROLOGUE</h3>
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ca76d15440f57886331a6ca00b0c514a/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fca76d15440f57886331a6ca00b0c514a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ca76d15440f57886331a6ca00b0c514a/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fca76d15440f57886331a6ca00b0c514a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
     allowfullscreen="true"
